[package]
name = "wanderer-server"
version = "0.1.0"
authors = ["Uladzislau <wldyslw@outlook.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.6", default-features = false }
rocket_cors = { version = "0.5.2", default-features = false }
diesel = { version = "1.4.4", default-features = false, features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]
