[package]
name = "wanderer-server"
version = "0.1.0"
authors = ["Uladzislau <wldyslw@outlook.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
readme = "README.md"
homepage = "https://wanderer.wldyslw.by"
default-run = "wanderer-server"

[lib]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.6", default-features = false }
rocket_cors = { version = "0.5.2", default-features = false }
diesel = { version = "1.4.4", default-features = false, features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
scrypt = "0.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
redis = "0.19.0"
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "redis_pool", "json", "serve"]
